# treds-work-zone-analysis

./: .gitignore  Makefile  README.md  convert_sav_to_csv.py  eda.ipynb  package-lock.json  package.json  pyproject.toml  utils.py
docs/: types.ts
docs/8-18_9-18/: index.html  package-lock.json  package.json  vite.config.ts
docs/8-18_9-18/src/: App.tsx  index.css  store.ts  types.ts  utils.ts
docs/8-18_9-18/src/components/: SpeedPlots.tsx  SyncedSpeedPlots.tsx  VehicleTimeline.tsx  WorkzoneMeta.tsx  WorkzoneSelector.tsx
docs/data/workzones/: 8-1006.json  8-1032.json  8-1035.json  8-1050.json  8-1053.json  8-1054.json  8-1055.json  8-1057.json  8-1058.json  8-1380.json  8-1532.json  8-1809.json  8-1893.json  8-2127.json  8-2448.json  8-2472.json  8-2633.json  8-2671.json  8-3093.json  8-3597.json  8-3620.json  8-3750.json  8-3904.json  8-4006.json  8-443.json  8-535.json  8-5726.json  8-5815.json  8-644.json  8-6568.json  8-7324.json  8-7431.json  8-7442.json  8-7545.json  8-7713.json  8-840.json  8-848.json  8-8728.json  8-921.json  8-9291.json  (+4 more)
docs/sparklines/: index.html  main.js  utils.js
docs/sparklines-v2/: index.html  package-lock.json  package.json  vite.config.ts
docs/sparklines-v2/public/: workzones  workzones-metadata.json
docs/sparklines-v2/src/: App.tsx  types.ts  utils.ts
eda/: eda-11-23-12-23Cleaned_5.ipynb  eda-3-31_4-16_DataAfterControlFixandAlertDistanceChange.py  eda-8-18_9-18.py  eda-large-dataset.ipynb  eda.py  utils.py
raw_data/: README.md
scripts/: convert_sav_to_csv.py  convert_sav_to_parquet.py
(+29 files in other folders)
